--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
 
     server_name localhost;
-    root /var/www/app/src;
+    root /var/www/app/public;
 
     error_log /var/log/nginx/localhost.error.log;
     access_log /var/log/nginx/localhost.access.log;
