--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,11 @@
         }
     ],
     "require": {
-        "league/csv": "9.0"
+        "league/csv": "9.0",
+        "php-di/php-di": "^7.0",
+        "php": "^8.1",
+        "symfony/var-dumper": "^6.2",
+        "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
